# metabolicpd-Toph

./: .gitignore  .pre-commit-config.yaml  README.md  Simple PD Model Matrix.xlsx  compartmentalized_pb_pk_model.py  example.py  import_matrix.py  old_compartmentalized_model.py  pb_pk model to lower-level model.py  ptr_class.py  pyproject.toml  pyrightconfig.json  read_and_plot.py  read_and_plot_logan.py  simple_model.py  simulation.py  simulator.py  symbolic_approach.py  testing_funciton_calls.py  tox.ini
data/: Updated PD Matrix.xlsx  central_carbon_tb.csv  central_carbon_tb.xlsx  high_gba.xlsx  high_gba_12h.xlsx  high_mutant_lrrk2.xlsx  high_mutant_lrrk2_12h.xlsx  low_gba.xlsx  low_gba_12h.xlsx  low_mutant_lrrk2.xlsx  low_mutant_lrrk2_12h.xlsx  minimal_example.csv  minimal_example.xlsx  results.csv  s_matrix_by_hand.xlsx  sample_simulation.xlsx  simple_net.xlsx  simple_pd_network.csv  simple_pd_network.xlsx  simple_pd_network_no_virtual.csv  simple_pd_network_no_virtual.xlsx  simple_pd_network_no_virtual_virtual.csv  simple_pd_network_no_virtual_virtual.xlsx  uber_edge_example.xlsx
docs/source/: conf.py  metabolicpd.rst  modules.rst
metabolicpd/examples/: example1.py  example2.py  example3.py  example4.py  example5.py
metabolicpd/io/: kegg_notes.md  kegg_pathway.py
metabolicpd/life/: network.py  util.py  virtual_nodes.py
tests/: test_kegg_pathway.py  test_network.py
