[tool.poetry]
name = "metabolicpd"
version = "0.1.1"
description = ""
authors = ["Logan Reed <me@loganreed.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
matplotlib = "^3.7.1"
cycler = "^0.11.0"
numpy = "^1.25.0"
pandas = "^2.0.3"
openpyxl = "^3.1.2"
sympy = "^1.12"
scipy = "^1.11.1"
seaborn = "^0.12.2"
biopython = "^1.81"



[tool.poetry.group.docs.dependencies]
sphinx = "<7"
sphinx-rtd-theme = "^1.2.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
pre-commit = "^3.3.3"
pydocstyle = "^6.3.0"
isort = "^5.12.0"
pytest = "^7.4.0"
tox = "^4.6.4"
codetiming = "^1.4.0"
tabulate = "^0.9.0"
matplotlib-backend-kitty = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pydocstyle]
convention = "google"
add-ignore = "D100,D101,D102,D103,D104,D105,D106,D107"
